Added BasemapGallery selection

--- a/index.html
+++ b/index.html
@@ -27,12 +27,24 @@
                 zoom: 13
               });
 
-              var basemapToggle = new BasemapToggle({
-              view: view,
-              nextBasemap: "satellite"
-              });
+              // Using this section will result in a toggle between topo-vector and satellite  and requires widgets/BasemapToggle
+              // var basemapToggle = new BasemapToggle({
+              // view: view,
+              // nextBasemap: "satellite"
+              // });
         
-              view.ui.add(basemapToggle, "bottom-right");
+              // view.ui.add(basemapToggle, "bottom-right");
+
+              var basemapGallery = new BasemapGallery({
+                view: view,
+                source: {
+                  portal: {
+                    url: "https://www.arcgis.com",
+                    useVectorBasemaps: true  // Load vector tile basemaps
+                  }
+                }
+              });
+              view.ui.add(basemapGallery, "top-right");
             });
           </script>
     </head>
